// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Component with styles should render correctly and match snapshots 1`] = `
<StyledComponent
  alt="ABC"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Image-sc-1m0q2wx-0",
        "isStatic": false,
        "rules": Array [
          "max-width:100%;height:auto;",
          [Function],
          ";",
          ";",
        ],
      },
      "displayName": "Image",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Image-sc-1m0q2wx-0",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  placeholderSrc="http://xyz.com"
  src="http://abc.com"
/>
`;

exports[`Image Component with styles should render correctly with lazy load 1`] = `
<StyledComponent
  alt="Dummy Image"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Image-sc-1m0q2wx-0",
        "isStatic": false,
        "rules": Array [
          "max-width:100%;height:auto;",
          [Function],
          ";",
          ";",
        ],
      },
      "displayName": "Image",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Image-sc-1m0q2wx-0",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  loading="lazy"
  placeholderSrc="/images/image-placeholder.png"
  sizes="(min-width: 36em) 33.3vw, 100vw"
  src="https://dummyimage.com/600x400/000/fff"
  srcset=""
/>
`;
